# dbt-core

./: pyproject.toml
core/dbt/config/: profile.py  project.py  runtime.py
core/dbt/contracts/: project.py
core/dbt/task/: run.py
core/dbt/tests/fixtures/: project.py
test/integration/077_schema_management_tests/: test_local_dependency.py
tests/functional/schema_management/: test_drop_dangling_models.py
